--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
@@ -60,6 +60,41 @@
 					</tbody>
 				</table>
 			</div>
+			
+			<div class="col-xs-12 col-sm-6">
+				<h2>Graphs</h2>
+				
+				<div class="panel panel-default">
+					<div class="panel-heading">Team survival</div>
+					<div class="panel-body">
+						<div id="team-survival-chart" style="height: 400px;" class="google-chart"></div>
+					</div>
+				</div>
+				<script type="text/javascript">
+					google.load("visualization", "1", {packages:["corechart"]});
+					google.setOnLoadCallback(drawChart);
+					function drawChart() {
+						var data = google.visualization.arrayToDataTable([
+							['Status', 'Number of players'],
+							['Survived', 11],
+							['Not survived', 2]
+						]);
+		
+						var options = {
+							legend: 'none',
+							'chartArea': {'width': '100%', 'height': '100%'},
+							slices: {
+								0: { color: 'green' },
+								1: { color: 'red' }
+							}
+						};
+		
+						var chart = new google.visualization.PieChart(document.getElementById('team-survival-chart'));
+						chart.draw(data, options);
+					}
+				</script>
+			</div>
+			
 		</div>
 		
 	</div>
