Display missing "total time" data on 'campaign match statistics' page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
@@ -20,6 +20,10 @@
 						Played at
 					</li>
 					<li class="list-group-item">
+						<span class="badge" th:text="${match.totalTimeHumanReadable}"></span>
+						Total time
+					</li>
+					<li class="list-group-item">
 						<span class="badge" th:text="${match.difficultyName}"></span>
 						Difficulty
 					</li>
