--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
@@ -31,6 +31,10 @@
 						<span class="badge" th:text="${match.restarts}"></span>
 						Restarts
 					</li>
+					<li class="list-group-item">
+						<span class="badge" th:text="${match.playerCount}"></span>
+						Number of players
+					</li>
 				</ul>
 				
 				<div class="panel panel-default" th:if="${match.image != null}">
@@ -66,22 +70,22 @@
 			</div>
 			
 			<div class="col-xs-12 col-sm-6">
-				<h2>Graphs</h2>
+				<h2>Charts</h2>
 				
 				<div class="panel panel-default">
-					<div class="panel-heading">Team survival</div>
+					<div class="panel-heading">Team survival rate</div>
 					<div class="panel-body">
 						<div id="team-survival-chart" style="height: 400px;" class="google-chart"></div>
 					</div>
 				</div>
-				<script type="text/javascript">
+				<script th:inline="javascript">
 					google.load("visualization", "1", {packages:["corechart"]});
 					google.setOnLoadCallback(drawChart);
 					function drawChart() {
 						var data = google.visualization.arrayToDataTable([
 							['Status', 'Number of players'],
-							['Survived', 11],
-							['Not survived', 2]
+							['Survived', [[${match.survivedPlayerCount}]] ],
+							['Not survived', [[${match.playerCount - match.survivedPlayerCount}]] ]
 						]);
 		
 						var options = {
