--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/home.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/home.html
@@ -3,79 +3,97 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Home</h1>
+		<div class="page-header">
+			<h1>Home</h1>
+		</div>
 		
-		<h2>Most played maps</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Map</th>
-					<th>Match count</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="mostPlayedMap : ${mostPlayedMaps}">
-					<td >
-						<a th:href="${'/map/' + mostPlayedMap.mapId}" th:text="${mostPlayedMap.mapName}"></a>
-					</td>
-					<td th:text="${mostPlayedMap.gamesCount}"></td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="row">
+			<div class="col-xs-12 col-sm-6">
+				<div class="row">
+					<div class="col-xs-12 col-lg-6">
+						<h2>Most played maps</h2>
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Map</th>
+									<th>Match count</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="mostPlayedMap : ${mostPlayedMaps}">
+									<td >
+										<a th:href="${'/map/' + mostPlayedMap.mapId}" th:text="${mostPlayedMap.mapName}"></a>
+									</td>
+									<td th:text="${mostPlayedMap.gamesCount}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div class="col-xs-12 col-lg-6">
+						<h2>Maps by longest break</h2>
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Map</th>
+									<th>Days not played</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="map : ${mapsByBreak}">
+									<td>
+										<a th:href="${'/map/' + map.mapId}" th:text="${map.mapName}"></a>
+									</td>
+									<td th:text="${map.breakDayCount == null ? 'not played yet' : map.breakDayCount}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-6">
+				<div class="row">
+					<div class="col-xs-12 col-lg-6">
+						<h2>Most active players</h2>
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Player</th>
+									<th>Match count</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="mostActivePlayer : ${mostActivePlayers}">
+									<td>
+										<a th:href="${'/user/' + mostActivePlayer.playerId}" th:text="${mostActivePlayer.playerName}"></a>
+									</td>
+									<td th:text="${mostActivePlayer.matchCount}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div class="col-xs-12 col-lg-6">
+						<h2>Players by longest break</h2>
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Player</th>
+									<th>Days not played</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="userActivity : ${usersActivity}">
+									<td>
+										<a th:href="${'/user/' + userActivity.userId}" th:text="${userActivity.userName}"></a>
+									</td>
+									<td th:text="${userActivity.daysInactive == null ? 'not played' : userActivity.daysInactive}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
 		
-		<h2>Map list by longest break</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Map</th>
-					<th>Days</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="map : ${mapsByBreak}">
-					<td>
-						<a th:href="${'/map/' + map.mapId}" th:text="${map.mapName}"></a>
-					</td>
-					<td th:text="${map.breakDayCount == null ? 'not played' : map.breakDayCount}"></td>
-				</tr>
-			</tbody>
-		</table>
-		
-		<h2>Most active players</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Player</th>
-					<th>Match count</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="mostActivePlayer : ${mostActivePlayers}">
-					<td>
-						<a th:href="${'/user/' + mostActivePlayer.playerId}" th:text="${mostActivePlayer.playerName}"></a>
-					</td>
-					<td th:text="${mostActivePlayer.matchCount}"></td>
-				</tr>
-			</tbody>
-		</table>
-		
-		<h2>Players activity</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Player</th>
-					<th>Days since last match</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="userActivity : ${usersActivity}">
-					<td>
-						<a th:href="${'/user/' + userActivity.userId}" th:text="${userActivity.userName}"></a>
-					</td>
-					<td th:text="${userActivity.daysInactive == null ? 'not played' : userActivity.daysInactive}"></td>
-				</tr>
-			</tbody>
-		</table>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
