Replace average death count with total death count in map general statistics dto.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
@@ -18,7 +18,7 @@
 					<th>Most versus mode winner team points</th>
 					<th>Campaign total player count</th>
 					<th>Campaign survived player count</th>
-					<th>Average death count</th>
+					<th>Campaign total death count</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -27,7 +27,7 @@
 					<td th:text="${mapStatistics.topVersusPoints}"></td>
 					<td th:text="${mapStatistics.totalCampaignPlayerCount}"></td>
 					<td th:text="${mapStatistics.survivedCampaignPlayerCount}"></td>
-					<td th:text="${mapStatistics.averageCampaignDeathCount}"></td>
+					<td th:text="${mapStatistics.totalCampaignDeathCount}"></td>
 				</tr>
 			</tbody>
 		</table>
