--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-picker.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-picker.html
@@ -3,11 +3,19 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Choose match type</h1>
 		
-		<ul>
-			<li><a href="/new-match/add/campaign">Campaign</a></li>
-			<li><a href="/new-match/add/versus">Versus</a></li>
+		<div class="page-header">
+			<h1>Add match</h1>
+		</div>
+		
+		<h2>Choose match type</h2>
+		<ul class="list-inline">
+			<li>
+				<a href="/new-match/add/campaign"><img src="/static/images/match-type-campaign.png" alt="Campaign" /></a>
+			</li>
+			<li>
+				<a href="/new-match/add/versus"><img src="/static/images/match-type-versus.png" alt="Versus" /></a>
+			</li>
 		</ul>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
