--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-activated.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-activated.html
@@ -3,7 +3,13 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Match saved</h1>
+		
+		<div class="page-header">
+			<h1>Add match</h1>
+		</div>
+		
+		<div class="alert alert-success">Match saved.</div>
+		
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
