--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
@@ -5,7 +5,7 @@
 	<div id="content">
 		
 		<div class="page-header">
-			<h1 th:text="${user.login + ' profile'}"></h1>
+			<h1 th:text="${userProfile.login + ' profile'}"></h1>
 		</div>
 		
 		<div class="row">
