Add chart with most popular losing teammates on user profile page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
@@ -150,7 +150,7 @@
 				</div>
 				
 				<div class="panel panel-default">
-					<div class="panel-heading">Versus mode most popular teammates</div>
+					<div class="panel-heading">Versus mode most popular winning teammates</div>
 					<div class="panel-body">
 						<div id="versus-winning-teammate-chart" style="height: 400px;" class="google-chart"></div>
 					</div>
@@ -172,6 +172,35 @@
 							};
 			
 							var chart = new google.visualization.PieChart(document.getElementById('versus-winning-teammate-chart'));
+							chart.draw(data, options);
+						}
+						//]]>
+					</script>
+				</div>
+				
+				<div class="panel panel-default">
+					<div class="panel-heading">Versus mode most popular losing teammates</div>
+					<div class="panel-body">
+						<div id="versus-losing-teammate-chart" style="height: 400px;" class="google-chart"></div>
+					</div>
+					<script th:inline="javascript">
+						//<![CDATA[
+						var versusLosingTeammateData = [[${versusLosingTeammates}]]
+						google.load("visualization", "1", {packages:["corechart"]});
+						google.setOnLoadCallback(drawChartVersusLosingTeammate);
+						function drawChartVersusLosingTeammate() {
+							var data = new google.visualization.DataTable();
+							data.addColumn('string', 'User');
+							data.addColumn('number', 'Games played');
+							for (i = 0; i < versusLosingTeammateData.length; i++) {
+								data.addRow([versusLosingTeammateData[i].userName, versusLosingTeammateData[i].gamesCount]);
+							}
+			
+							var options = {
+								'chartArea': {'width': '100%', 'height': '100%'},
+							};
+			
+							var chart = new google.visualization.PieChart(document.getElementById('versus-losing-teammate-chart'));
 							chart.draw(data, options);
 						}
 						//]]>
