--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/change-password.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/change-password.html
@@ -10,6 +10,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
 				<form method="POST" action="/change-password">
+					<div class="alert alert-danger" th:if="${errors != null}" th:each="error : ${errors}" th:text="${error}"></div>
 					<div class="form-group">
 						<label for="change-password-current-pasword">Current password:</label>
 						<input id="change-password-current-pasword" class="form-control" type="password" name="current-password" value="" />
