--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/recent-matches.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/recent-matches.html
@@ -16,7 +16,7 @@
 		</div>
 		
 		<div class="row">
-			<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+			<div class="col-xs-12 col-lg-10 col-lg-offset-1">
 				<div class="alert alert-info" th:if="${recentMatches.length == 0}">No matches played</div>
 				<table class="table table-hover" th:if="${recentMatches.length > 0}">
 					<thead>
