Change vertical axis to start at 0 value.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/home.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/home.html
@@ -118,6 +118,7 @@
 						var options = {
 							'legend': { 'position': 'none' },
 							'chartArea': {'width': '90%', 'height': '80%'},
+							'vAxis': {'minValue': 0}
 						};
 		
 						var chart = new google.visualization.AreaChart(document.getElementById('match-count-chart'));
